Added admin functionalities for offices edition